--- a/u-net_bedrock_sediment_calassification.ipynb
+++ b/u-net_bedrock_sediment_calassification.ipynb
@@ -171,7 +171,7 @@
       },
       "source": [
         "# Specify your bucket here:\n",
-        "BUCKET = 'jarnaalexandra'"
+        "BUCKET = 'your-bucket-name'"
       ],
       "execution_count": null,
       "outputs": []
@@ -183,7 +183,7 @@
       },
       "source": [
         "# Specify locations for outputs in Cloud Storage. \n",
-        "FOLDER = 'Bedrock_Farsund_manual'\n",
+        "FOLDER = 'data'\n",
         "TRAINING_BASE = 'training_patches'\n",
         "EVAL_BASE = 'eval_patches'\n",
         "\n",
@@ -244,7 +244,7 @@
       },
       "source": [
         "# Specify predictors located at GEE\n",
-        "l8sr = ee.Image('users/jarnaalexandra/TerrengNorge3')"
+        "l8sr = ee.Image('your-path-to-the-dataset')"
       ],
       "execution_count": null,
       "outputs": []
@@ -275,7 +275,7 @@
         "id": "Rr5ukEBQbJxG"
       },
       "source": [
-        "nlcd = ee.Image('users/jarnaalexandra/F_bedr_manual_reclNY').select('b1').float()\n",
+        "nlcd = ee.Image('your-dataset').select('b1').float()\n",
         "\n",
         "\n",
         "mapid = nlcd.getMapId({'min': 0, 'max': 1})\n",
@@ -336,8 +336,8 @@
         "id": "ure_WaD0itQY"
       },
       "source": [
-        "trainingPolys = ee.FeatureCollection('users/jarnaalexandra/bergeval1m')\n",
-        "evalPolys = ee.FeatureCollection('users/jarnaalexandra/bergtrain1m')\n",
+        "trainingPolys = ee.FeatureCollection('your-dataset')\n",
+        "evalPolys = ee.FeatureCollection('your-dataset')\n",
         "\n",
         "polyImage = ee.Image(0).byte().paint(trainingPolys, 1).paint(evalPolys, 2)\n",
         "polyImage = polyImage.updateMask(polyImage)\n",
@@ -831,17 +831,17 @@
       },
       "source": [
         "# Output assets folder: \n",
-        "user_folder = 'users/jarnaalexandra' \n",
+        "user_folder = 'output_path' \n",
         "\n",
         "# Base file name to use for TFRecord files and assets.\n",
-        "bj_image_base = 'berg_Farsund_1'\n",
+        "bj_image_base = 'output-name'\n",
         "bj_kernel_buffer = [128, 128]\n",
         "# southern Norway\n",
         "bj_region = ee.Geometry.Polygon(\n",
-        "        [[[6, 59],\n",
-        "          [7, 59],\n",
-        "          [7, 58],\n",
-        "          [6, 58]]], None, False)\n"
+        "        [[[-, -],\n",
+        "          [-, -],\n",
+        "          [-, -],\n",
+        "          [-, -]]], None, False)\n"
       ],
       "execution_count": null,
       "outputs": []
