--- a/u-net_bedrock_sediment_calassification.ipynb
+++ b/u-net_bedrock_sediment_calassification.ipynb
@@ -336,8 +336,8 @@
         "id": "ure_WaD0itQY"
       },
       "source": [
-        "trainingPolys = ee.FeatureCollection('your-dataset')\n",
-        "evalPolys = ee.FeatureCollection('your-dataset')\n",
+        "trainingPolys = ee.FeatureCollection('your-training-dataset')\n",
+        "evalPolys = ee.FeatureCollection('your-evaluation-dataset')\n",
         "\n",
         "polyImage = ee.Image(0).byte().paint(trainingPolys, 1).paint(evalPolys, 2)\n",
         "polyImage = polyImage.updateMask(polyImage)\n",
